--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
               <p class="sign-up__subtitle">
                 Use the form below to create your account.
               </p>
-              <form action="" class="sign-up__form form">
+              <form class="sign-up__form form">
                 <div class="form__item first">
                   <h3>First Name</h3>
                   <input type="text" />
@@ -48,7 +48,7 @@
                   <h3>Date of Birth</h3>
                   <div class="form__date-wrapper">
                     <div class="form__date-item">
-                      <select name="day" id="">
+                      <select name="day" id="day">
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -83,7 +83,7 @@
                       </select>
                     </div>
                     <div class="form__date-item">
-                      <select name="month" id="">
+                      <select name="month" id="month">
                         <option value="1">January</option>
                         <option value="2">February</option>
                         <option value="3">March</option>
@@ -99,7 +99,7 @@
                       </select>
                     </div>
                     <div class="form__date-item">
-                      <select name="year" id="">
+                      <select name="year" id="year">
                         <option value="2023">2023</option>
                         <option value="2022">2022</option>
                         <option value="2021">2020</option>
